update personal settings

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,6 +21,7 @@
       {{partial "toc.html" .}}
       {{partial "textprocessing.html" . }}
     </article>
+    {{partial "comment.html" .}}
     {{partial "footer.html" .}}
 </div>
 </body>
